# sloppyslop

./: .gitignore  AGENT_PARAMETER_REFACTORING.md  AGENT_REFACTORING_COMPLETE.md  ASYNC_IMPLEMENTATION.md  BEFORE_AFTER_EXAMPLES.md  CHANGELOG_REFACTORING.md  CONTRIBUTING.md  DYNAMIC_WORKTREES_IMPLEMENTATION.md  EVENT_CLEANUP.md  FINAL_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  OUTPUT_SEPARATION_STATUS.md  PARALLEL_EXECUTION.md  README.md  REFACTORING_GUIDE.md  REFACTORING_SESSION_SUMMARY.md  SPAWN_DEPTH_REFACTORING.md  VERTEX_AI_IMPLEMENTATION.md  VERTEX_AI_SUPPORT.md  WARNING_CALLBACK_METHOD.md  config.example.yaml  example_subcommand.py  pyproject.toml
examples/: README.md  parallel_agents_example.py
examples/subcommands/: README.md  pr-review.py
src/llm_sandbox/: __init__.py  __main__.py  analyzer.py  builtin_subcommands.py  config.py  container.py  event_handlers.py  events.py  git_ops.py  image.py  llm_provider.py  local_tools.py  mcp_server.py  mcp_tools.py  models.py  output.py  runner.py  subcommand.py  worktree.py
src/llm_sandbox/subcommands/: __init__.py  gen_containerfile.py  pr_review.py  run.py
src/llm_sandbox/subcommands/check/: __init__.py  subcommand.py
src/llm_sandbox/subcommands/cleanup/: __init__.py  subcommand.py
src/llm_sandbox/subcommands/gen_containerfile/: __init__.py  subcommand.py
src/llm_sandbox/subcommands/review/: __init__.py  (+7 more)
tests/: __init__.py  test_analyzer.py  test_config.py  test_events.py  test_git_ops.py  test_llm_provider.py  test_mcp_tools_dynamic.py  test_output.py  test_runner_dynamic.py  test_vertex_ai_config.py
(+2 files in other folders)
